--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 			</div>
 		</div>
 
-		<div class="div-content">
-			<div class="col-md-offset-3 div-info">
-				<div class="pd-t-16" >
+		<div class="div-content" >
+			<div class="div-info col-md-offset-3 " >
+				<div class="pd-t-16" style="width: 100%;">
 					<p> A Markov chain is a type of Markov process that has either discrete state space or discrete index set (often representing time), but the precise definition of a Markov chain varies. For example, it is common to define a Markov chain as a Markov process in either discrete or continuous time with a countable state space (thus regardless of the nature of time) but it is also common to define a Markov chain as having discrete time in either countable or continuous state space (thus regardless of the state space).  </p>
 				</div>
 			</div>
